XMLtoCSV/objects/unpackaged/objects/Release_vod__c.object
<CustomObject>
    <description>PMO Tool Kit - used to capture Release details for project, installations or cases</description>
    <fields>
        <fullName>Code_Drop_vod__c</fullName>
        <label>Code Drop</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GDO_Design_Lock_vod__c</fullName>
        <label>GDO Design Lock</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gate_vod__c</fullName>
        <label>Gate</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Parent_Release_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Select a release to which this release is related to.</description>
        <inlineHelpText>Select an existing release to which the current release is related to.</inlineHelpText>
        <label>Parent Release</label>
        <referenceTo>Release_vod__c</referenceTo>
        <relationshipLabel>Releases</relationshipLabel>
        <relationshipName>Releases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prod_Live_Date_vod__c</fullName>
        <label>Prod Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Related_Case_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Releases</relationshipLabel>
        <relationshipName>Releases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Project_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Project</label>
        <referenceTo>Project_vod__c</referenceTo>
        <relationshipLabel>Releases</relationshipLabel>
        <relationshipName>Releases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status_Summary_vod__c</fullName>
        <label>Status Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status_vod__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_vod__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Data Conversion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Tool Dev.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Mapping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Territory Alignment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Load</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UAT_Close_vod__c</fullName>
        <label>UAT Close</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UAT_Start_vod__c</fullName>
        <label>UAT Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Unit_Test_Certify_Close_vod__c</fullName>
        <label>Unit Test &amp; Certify Close</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Unit_Test_Certify_Start_vod__c</fullName>
        <label>Unit Test &amp; Certify Start</label>
        <type>Date</type>
    </fields>
    <label>Release</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Parent_Release_vod__c</columns>
        <columns>UAT_Close_vod__c</columns>
        <columns>UAT_Start_vod__c</columns>
        <columns>Status_vod__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Release Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Releases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>